tests/ui/issues/issue-2995.rs
fn bad (p: *const isize) {
    let _q: &isize = p as &isize; //~ ERROR non-primitive cast
}

fn main() { }
